Fixed optionBox z-index

--- a/src/components/utils.css
+++ b/src/components/utils.css
@@ -21,6 +21,7 @@
 
 .selectorOptionsBox {
   position: absolute;
+  z-index: 2;
   top: 34px;
   left: 0px;
   max-height: 250px;
